-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.8, 6.8.3, 6.9.0
-
e3ef5ef2f (dev), 7874babe9 (6.10), fbbdeac60 (6.9), f9d0c5ff8 (tqtc/lts-6.8), 35fc5bfe1 (tqtc/lts-6.5)
A TreeView which uses a TreeViewDelegate and has edit triggers set allows editing of non-editable parent items and does not allow editing of editable child items stored in a QStandardItemModel.
Steps to reproduce:
1. Run the attached example project
2. Expand the parent items.
3. Double click on the "Main Branch 1" parent item. Observe the non-editable item cannot be edited.
4. Double click on the "Main Branch 2" parent item. Observe the non-editable item can be edited. Expected behavior: the parent item should be non-editable
5. Double click on the "Sub branch 1.2" child item. Observe the editable item can edited
6. Double click on the "Sub branch 1.1" child item. Observe the editable item cannot be edited. Expected behavior: the child item should be editable
| For Gerrit Dashboard: QTBUG-136492 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 644863,3 | QQmlTreeModelToTableModel::flags: don't map original tree models indexes | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
| 649880,5 | QQuickTableView: use correct model when checking if an item is editable | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 651478,2 | QQuickTableView: use correct model when checking if an item is editable | 6.10 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 651527,2 | QQuickTableView: use correct model when checking if an item is editable | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 651602,2 | QQuickTableView: use correct model when checking if an item is editable | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
| 651630,4 | QQuickTableView: use correct model when checking if an item is editable | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |